<resources>
    <string name="app_name">To Do List</string>
    <string name="upcoming_tasks">Upcoming Tasks</string>
    <string name="view_tasks">View Tasks</string>
    <string name="create_a_task">Create A Task</string>
    <string name="you_have">You have</string>
    <string name="tasks">tasks</string>
    <string name="task_information">Task Information</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="priority">Priority:</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="display_task">Display Task</string>
    <string name="create_task">Create Task</string>
    <string name="task_name">Task Name</string>
    <string name="set_date">Set Date</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="submit">Submit</string>
    <string name="select_task">Select Task</string>
    <string name="enter_a_task_name">Enter a Task Name</string>
    <string name="select_a_date">Select a Date</string>
    <string name="select_a_priority">Select a Priority</string>
</resources>