<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numberOfUpcomingTasksLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/upcoming_tasks"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/numberOfUpcomingTasksLabel"
        app:layout_constraintStart_toStartOf="@+id/numberOfUpcomingTasksLabel"
        app:layout_constraintTop_toBottomOf="@+id/numberOfUpcomingTasksLabel" />

    <TextView
        android:id="@+id/nextTaskLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/nextTaskDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/nextTaskLabel"
        app:layout_constraintTop_toBottomOf="@+id/nextTaskLabel" />

    <TextView
        android:id="@+id/nextTaskPriorityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/nextTaskLabel"
        app:layout_constraintTop_toBottomOf="@+id/nextTaskLabel" />

    <Button
        android:id="@+id/viewTasksButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/view_tasks"
        app:layout_constraintEnd_toEndOf="@+id/nextTaskPriorityLabel"
        app:layout_constraintStart_toStartOf="@+id/nextTaskDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/nextTaskDateLabel" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_a_task"
        app:layout_constraintEnd_toEndOf="@+id/viewTasksButton"
        app:layout_constraintStart_toStartOf="@+id/viewTasksButton"
        app:layout_constraintTop_toBottomOf="@+id/viewTasksButton" />
</androidx.constraintlayout.widget.ConstraintLayout>